// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - Header should render Header with color paper 1`] = `
<Box
  className="makeStyles-appBarContainer-10"
  component="header"
>
  <AppBar
    className="makeStyles-paperBackground-4 makeStyles-withoutShadow-2"
    color="inherit"
    component="div"
    position="static"
  >
    <Toolbar
      component="nav"
    >
      <IconButton
        className="makeStyles-menuButton-1"
        color="inherit"
        edge="start"
      >
        <MenuIcon
          aria-label="Open left menu"
        />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-7 makeStyles-hideLoader-9"
    variant="indeterminate"
  />
</Box>
`;

exports[`Component - Header should render Header with type back 1`] = `
<Box
  className="makeStyles-appBarContainer-10"
  component="header"
>
  <AppBar
    className="makeStyles-defaultBackground-3 makeStyles-withoutShadow-2"
    color="inherit"
    component="div"
    position="static"
  >
    <Toolbar
      component="nav"
    >
      <IconButton
        className="makeStyles-menuButton-1"
        color="inherit"
        edge="start"
      >
        <ArrowBackIcon
          aria-label="Return previous page"
        />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-7 makeStyles-hideLoader-9"
    variant="indeterminate"
  />
</Box>
`;

exports[`Component - Header should render Header with type menu 1`] = `
<Box
  className="makeStyles-appBarContainer-10"
  component="header"
>
  <AppBar
    className="makeStyles-defaultBackground-3 makeStyles-withoutShadow-2"
    color="inherit"
    component="div"
    position="static"
  >
    <Toolbar
      component="nav"
    >
      <IconButton
        className="makeStyles-menuButton-1"
        color="inherit"
        edge="start"
      >
        <MenuIcon
          aria-label="Open left menu"
        />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-7 makeStyles-hideLoader-9"
    variant="indeterminate"
  />
</Box>
`;
